# browsepy

./: .appveyor,yml  .appveyor.yml  .buildinfo  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .scrutinizer.yml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  bottle.py  builtin_plugins.html  compat.html  exceptions.html  exclude.html  file.html  genindex.html  index.html  integrations.html  main.py  manager.html  objects.inv  plugins.html  py-modindex.html  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  stream.html  tests_utils.html
.doctrees/: builtin_plugins.doctree  compat.doctree  environment.pickle  exceptions.doctree  exclude.doctree  file.doctree  index.doctree  integrations.doctree  manager.doctree  plugins.doctree  quickstart.doctree  stream.doctree  tests_utils.doctree
_modules/: builtins.html  index.html  os.html  posix.html  tarfile.html  threading.html
_sources/: builtin_plugins.rst.txt  compat.rst.txt  exceptions.rst.txt  file.rst.txt  index.rst.txt  plugins.rst.txt
_static/: logo.css
browsepy/: __init__.py  __main__.py  __meta__.py  abc.py  appconfig.py  compat.py  exceptions.py  extensions.py  file.py  functional.py  glob.py  http.py  manager.py  managers.py  mimetype.py  stream.py  tests.py  transform.py  utils.py  widget.py
doc/: Makefile  builtin_plugins.rst  compat.rst  conf.py  exclude.rst  file.rst  glob.rst  index.rst  integrations.rst  manager.rst  plugins.rst  quickstart.rst  requirements.txt  stream.rst  tests_utils.rst
static/: 404.html
(+191 files in other folders)
