[metadata]
description-file = README.rst

[wheel]
universal = 1

[egg_info]
tag_build =

[pycodestyle]
show-source = True
ignore = E123,E126,E121,W504

[flake8]
select = F,C
max-complexity = 9
show-source = True

[yapf]
align_closing_bracket_with_visual_indent = true

[coverage:run]
source = browsepy
omit =
    */tests/*
    */tests.py
