[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1

[egg_info]
tag_build =

[pycodestyle]
ignore = E123,E126,E121,W504

[flake8]
ignore = E123,E126,E121,W504
max-complexity = 5
select = F,C
show-source = True

[yapf]
align_closing_bracket_with_visual_indent = true

[coverage:run]
branch = True
source = browsepy
omit =
    */tests/*
    */tests.py

[coverage:report]
show_missing = True
fail_under = 100
exclude_lines =
    pragma: no cover
    pass
    noqa
